# Hana

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  custom.css
Doc/Html/: _assignment_8h_source.html  _ast_node_8h_source.html  _class_declaration_8h_source.html  _code_gen_context_8h_source.html  _conditional_8h_source.html  _declaration_8h_source.html  _function_declaration_8h_source.html  _get_opt_8h_source.html  _method_call_8h_source.html  _range_8h_source.html  _return_8h_source.html  _visitor_8h_source.html  _while_loop_8h_source.html  annotated.html  buildins_8h_source.html  class_get_opt-members.html  class_get_opt.html  class_get_opt_1_1iterator-members.html  class_get_opt_1_1iterator.html  class_get_opt_1_1iterator__coll__graph.dot  classhana_1_1_array__coll__graph.dot  classhana_1_1_array_access.html  classhana_1_1_array_add_element-members.html  classhana_1_1_array_add_element__inherit__graph.dot  classhana_1_1_array_add_element_a4eba5179ee3305149d762c0d9a1d11ba_cgraph.dot  classhana_1_1_assignment-members.html  classhana_1_1_assignment.html  classhana_1_1_assignment__coll__graph.dot  classhana_1_1_assignment_a7ca1146fce1627db3e478aad2d2c550b_cgraph.dot  classhana_1_1_binary_op-members.html  classhana_1_1_binary_op_a0307453fa45fd59019fbcc8c1de4bb82_cgraph.dot  classhana_1_1_block-members.html  classhana_1_1_block__inherit__graph.dot  classhana_1_1_block_a71f348b66a0867a81aa6250a1a8da74a_icgraph.dot  classhana_1_1_boolean-members.html  classhana_1_1_boolean__inherit__graph.dot  classhana_1_1_class_declaration-members.html  classhana_1_1_class_declaration.html  classhana_1_1_class_declaration__inherit__graph.dot  classhana_1_1_code_gen_block-members.html  (+67 more)
Doc/Html/search/: all_10.js  all_11.js  all_14.js  all_2.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_d.js  classes_1.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_1.js
Hana/: Array.h  Assignment.cpp  Assignment.h  AstNode.cpp  AstNode.h  BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  ClassDeclaration.cpp  ClassDeclaration.h  CodeGenContext.cpp  CodeGenContext.h  CompareOperator.cpp  CompareOperator.h  Conditional.cpp  Conditional.h  Declaration.h  FunctionDeclaration.cpp  FunctionDeclaration.h  MethodCall.h  Range.cpp  Range.h  Return.h  UnaryOperator.cpp  UnaryOperator.h  VisitorPrettyPrint.cpp  VisitorSyntaxCheck.cpp  WhileLoop.cpp  WhileLoop.h  buildins.cpp  buildins.h  hana.cpp  hana.h  parser.y  tokens.l
Hana/AST/: AstNode.cpp  AstNode.h
Hana/Ast/: AstNode.cpp  AstNode.h
Hana/Builtins/: buildins.h
Hana/CodeGen/: Array.cpp  Array.h  Assignment.cpp  Assignment.h  BinaryOperator.cpp  BinaryOperator.h  ClassDeclaration.cpp  ClassDeclaration.h  CodeGenContext.cpp  CodeGenContext.h  CompareOperator.cpp  CompareOperator.h  Conditional.cpp  Conditional.h  Declaration.cpp  Declaration.h  FunctionDeclaration.cpp  FunctionDeclaration.h  MethodCall.cpp  MethodCall.h  Range.cpp  Range.h  Return.cpp  Return.h  UnaryOperator.cpp  UnaryOperator.h  WhileLoop.cpp  WhileLoop.h
Hana/Lexer/: tokens.l
Hana/Lib/: Stlib.cpp  Stlib.h
Hana/Parser/: parser.y
Hana/Utils/: GetOpt.cpp  GetOpt.h
Hana/Visitor/: BinaryOperator.cpp  Visitor.h  VisitorPrettyPrint.cpp  VisitorPrettyPrint.h  VisitorSyntaxCheck.cpp  VisitorSyntaxCheck.h
Samples/: array.hana  calc.hana  require.hana  wloop.hana
Testing/: calc.hana  class.hana  eww.hana  fibo.hana  require_this.hana  test.hana  uwu.hana  wrong_extension.huh
docs/: CNAME  _array_8h_source.html  _assignment_8h_source.html  _ast_node_8h_source.html  _binary_operator_8h_source.html  _class_declaration_8h_source.html  _code_gen_context_8h_source.html  _compare_operator_8h_source.html  _conditional_8h_source.html  _declaration_8h_source.html  _function_declaration_8h_source.html  _get_opt_8h_source.html  _method_call_8h_source.html  _range_8h_source.html  _return_8h_source.html  _unary_operator_8h_source.html  _visitor_8h_source.html  _visitor_pretty_print_8h_source.html  _visitor_syntax_check_8h_source.html  _while_loop_8h_source.html  annotated.html  annotated_dup.js  buildins_8h_source.html  class_get_opt-members.html  class_get_opt.html  class_get_opt.js  class_get_opt_1_1iterator-members.html  class_get_opt_1_1iterator.html  class_get_opt_1_1iterator.js  class_get_opt__coll__graph.dot  classes.html  classhana_1_1_array-members.html  classhana_1_1_array.html  classhana_1_1_array.js  classhana_1_1_array_aa197db7e103e1df1936fc20b166cc024_cgraph.dot  classhana_1_1_array_access-members.html  classhana_1_1_array_access.html  classhana_1_1_array_access.js  classhana_1_1_array_access__coll__graph.dot  classhana_1_1_array_access_ab9b34483e182dd7f9175313e8edcf4ca_cgraph.dot  (+148 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+14 more)
